--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -84,7 +84,7 @@ const formatDate = (date: Date) =>
                   href={`/news/${post.slug}`}
                   class="text-indigo-600 font-medium hover:text-indigo-700"
                 >
-                  Read more
+                  Read more...
                 </a>
               </div>
             </article>
