Footer: fixed for mobile

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import { Icon } from "astro-icon/components";
 	role="contentinfo"
 >
 	<div class="max-w-6xl mx-auto">
-		<div class="grid md:grid-cols-4 gap-48 mb-12 md:pl-6 lg:pl-8 xl:pl-10">
+		<div class="grid md:grid-cols-4 gap-8 md:gap-48 mb-8 md:mb-12 md:pl-6 lg:pl-8 xl:pl-10">
 			<div class="md:col-span-1">
 				<img
 					src="/images/logo/excalibur_logo.svg"
