Add plausible analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,6 +66,10 @@ const robotsContent = [
 		<meta name="robots" content={robotsContent} />
 		<link rel="canonical" href={siteURL.href} />
 
+		<!-- plausible analytics code -->
+		<script defer data-domain="excalibur.csd.auth.gr" src="https://analytics.csd.auth.gr/js/script.js"></script>
+
+
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content={ogType} />
 		<meta property="og:url" content={siteURL.href} />
